Fixed the unwanted overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,13 @@
  */
 @import "bootstrap";
 
+html {
+  overflow-y: scroll;
+}
+
 body {
+  height: 100%;
+  margin: 0;
   overflow-x: hidden;
 }
 
